--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
         <div class="direct-line">
           <p>
             <a href="tel:+18335666394">1 (833) 566-6394</a>
-            <a href="mailto:hello@bnbbs.com">hello@bnbbs.com</a>
+            <a href="mailto:hello@bnbbs.co">hello@bnbbs.co</a>
           </p>
         </div>
         <div class="aux">
