--- a/public/index.html
+++ b/public/index.html
@@ -77,11 +77,11 @@
             <span>9854 National Blvd #1537</span>
             <span>Los Angeles, CA 90034</span>
           </div>
-          <div class="social">
+          <!-- <div class="social">
             <a href="#">
               <span class="substack">Newsletter</span>
             </a>
-          </div>
+          </div> -->
         </div>
       </section>
     </div>
