Fix canonical URL

--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://bits-n-bobs.com/" />
+    <meta property="og:url" content="https://www.bits-n-bobs.com/" />
     <meta property="og:title" content="Bits & Bobs Co." />
     <meta property="og:description" content="A culture-led software company" />
-    <meta property="og:image" content="https://bits-n-bobs.com/images/thumbnail.png" />
+    <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://bits-n-bobs.com/" />
+    <meta property="twitter:url" content="https://www.bits-n-bobs.com/" />
     <meta property="twitter:title" content="Bits & Bobs Co." />
     <meta property="twitter:description" content="A culture-led software company" />
-    <meta property="twitter:image" content="https://bits-n-bobs.com/images/thumbnail.png" />
+    <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <meta name="viewport" content="width=device-width, user-scalable=no">
