Added 3D Scene of Unexpected Logic

--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,21 @@
     <!-- Primary Meta Tags -->
     <title>Bits & Bobs Co.</title>
     <meta name="title" content="Bits & Bobs Co." />
-    <meta name="description" content="A culture-led software company" />
+    <meta name="description" content="A culture-led software company. Established 2023." />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.bits-n-bobs.com/" />
     <meta property="og:title" content="Bits & Bobs Co." />
     <meta property="og:description" content="A culture-led software company" />
-    <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.png" />
+    <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.bits-n-bobs.com/" />
     <meta property="twitter:title" content="Bits & Bobs Co." />
     <meta property="twitter:description" content="A culture-led software company" />
-    <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.png" />
+    <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <meta name="viewport" content="width=device-width, user-scalable=no">
@@ -86,6 +86,7 @@
       </section>
     </div>
     <div class="scripts">
+      <script src="./libs/ammo.wasm.js"></script>
       <script src="./index.js"></script>
     </div>
   </body>
