Build for Production

--- a/public/index.html
+++ b/public/index.html
@@ -86,8 +86,16 @@
       </section>
     </div>
     <div class="scripts">
-      <script src="./libs/ammo.wasm.js"></script>
       <script src="./index.js"></script>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ39Z2RRJ"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6RZ39Z2RRJ');
+      </script>
     </div>
   </body>
 </html>
