--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
       </section>
     </div>
     <div class="scripts">
-      <script src="./index.js"></script>
+      <script async src="./index.js"></script>
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ39Z2RRJ"></script>
       <script>
