Add theme color

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
+    <meta name="theme-color" content="rgb(222, 232, 222)">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="./main.css" />
     <link rel="icon" href="./images/icon.png" />
