Add a moment to modify ampersand

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <div id="seo">
       <div id="navigation">
         <h1 id="wordmark">
-          <span>Bits</span> <span>&amp; Bobs</span> <span>Co</span>
+          <span>Bits</span> <span><span id="ampersand">&amp;</span> Bobs</span> <span>Co</span>
         </h1>
         <p class="founded">
           Est 2023
