--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,8 @@
           Est 2023
         </p>
       </div>
-      <section>
+      <section id="fold">
+        <h2><a href="#fold" class="hidden">We are</a></h2>
         <p class="subheading">
           A software company
         </p>
@@ -87,7 +88,7 @@
       </section>
     </div>
     <div class="scripts">
-      <script async src="./index.js"></script>
+      <!-- <script async src="./index.js"></script> -->
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ39Z2RRJ"></script>
       <script>
