Remove meta to check pagespeed

--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,11 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- Primary Meta Tags -->
-    <title>Bits & Bobs Co.</title>
-    <meta name="title" content="Bits & Bobs Co." />
-    <meta name="description" content="A culture-led software company • Established 2023" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.bits-n-bobs.com/" />
-    <meta property="og:title" content="Bits & Bobs Co." />
-    <meta property="og:description" content="A culture-led software company • Established 2023" />
-    <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.bits-n-bobs.com/" />
-    <meta property="twitter:title" content="Bits & Bobs Co." />
-    <meta property="twitter:description" content="A culture-led software company • Established 2023" />
-    <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
     <meta name="theme-color" content="rgb(222, 232, 222)">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./main.css" />
     <link rel="icon" href="./images/icon.png" />
 
@@ -39,10 +22,10 @@
           Est 2023
         </p>
       </div>
-      <section id="fold">
-        <h2><a href="#fold" class="hidden">We are</a></h2>
+      <section id="we-are">
+        <h2><a href="#we-are" class="hidden">We are</a></h2>
         <p class="subheading">
-          A software company
+          a software company
         </p>
       </section>
       <section id="vision">
