--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
 
+    <!-- Primary Meta Tags -->
+    <title>Bits & Bobs Co</title>
+    <meta name="title" content="Bits & Bobs Co" />
+    <meta name="description" content="A culture-led software company • Established 2023" />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.bits-n-bobs.com/" />
+    <meta property="og:title" content="Bits & Bobs Co" />
+    <meta property="og:description" content="A culture-led software company • Established 2023" />
+    <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.bits-n-bobs.com/" />
+    <meta property="twitter:title" content="Bits & Bobs Co" />
+    <meta property="twitter:description" content="A culture-led software company • Established 2023" />
+    <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
-    <meta name="theme-color" content="rgb(222, 232, 222)">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="rgb(222, 232, 222)" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./main.css" />
     <link rel="icon" href="./images/icon.png" />
 
@@ -23,7 +40,7 @@
         </p>
       </div>
       <section id="we-are">
-        <h2><a href="#we-are" class="hidden">We are</a></h2>
+        <h2 class="hidden"><a href="#we-are">We are</a></h2>
         <p class="subheading">
           a software company
         </p>
@@ -50,6 +67,7 @@
         </p>
       </section>
       <section id="contact">
+        <h2 class="hidden"><a href="#contact">Reach us</a></h2>
         <div class="direct-line">
           <p>
             <a href="tel:+18335666394">1 (833) 566-6394</a>
