--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8">
 
     <!-- Primary Meta Tags -->
-    <title>Bits & Bobs Co</title>
-    <meta name="title" content="Bits & Bobs Co" />
+    <title>Bits &amp; Bobs Co</title>
+    <meta name="title" content="Bits &amp; Bobs Co" />
     <meta name="description" content="A culture-led software company • Established 2023" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.bits-n-bobs.com/" />
-    <meta property="og:title" content="Bits & Bobs Co" />
+    <meta property="og:title" content="Bits &amp; Bobs Co" />
     <meta property="og:description" content="A culture-led software company • Established 2023" />
     <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.bits-n-bobs.com/" />
-    <meta property="twitter:title" content="Bits & Bobs Co" />
+    <meta property="twitter:title" content="Bits &amp; Bobs Co" />
     <meta property="twitter:description" content="A culture-led software company • Established 2023" />
     <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
 
@@ -89,7 +89,7 @@
       </section>
     </div>
     <div class="scripts">
-      <!-- <script async src="./index.js"></script> -->
+      <script async src="./index.js"></script>
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ39Z2RRJ"></script>
       <script>
