Put script at end and remove trailing slashes

--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,32 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="en">
   <head>
     <meta charset="utf-8">
 
     <!-- Primary Meta Tags -->
     <title>Bits &amp; Bobs Co</title>
-    <meta name="title" content="Bits &amp; Bobs Co" />
-    <meta name="description" content="A culture-led software company • Established 2023" />
+    <meta name="title" content="Bits &amp; Bobs Co">
+    <meta name="description" content="A culture-led software company • Established 2023">
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.bits-n-bobs.com/" />
-    <meta property="og:title" content="Bits &amp; Bobs Co" />
-    <meta property="og:description" content="A culture-led software company • Established 2023" />
-    <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.bits-n-bobs.com/">
+    <meta property="og:title" content="Bits &amp; Bobs Co">
+    <meta property="og:description" content="A culture-led software company • Established 2023">
+    <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.bits-n-bobs.com/" />
-    <meta property="twitter:title" content="Bits &amp; Bobs Co" />
-    <meta property="twitter:description" content="A culture-led software company • Established 2023" />
-    <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg" />
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.bits-n-bobs.com/">
+    <meta property="twitter:title" content="Bits &amp; Bobs Co">
+    <meta property="twitter:description" content="A culture-led software company • Established 2023">
+    <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg">
 
     <!-- Meta Tags Generated with https://metatags.io -->
-    <meta name="theme-color" content="rgb(222, 232, 222)" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./main.css" />
-    <link rel="icon" href="./images/icon.png" />
+    <meta name="theme-color" content="rgb(222, 232, 222)">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="./main.css">
+    <link rel="icon" href="./images/icon.png">
 
   </head>
   <body>
@@ -89,7 +89,6 @@
       </section>
     </div>
     <div class="scripts">
-      <script async src="./index.js"></script>
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ39Z2RRJ"></script>
       <script>
@@ -99,6 +98,7 @@
 
         gtag('config', 'G-6RZ39Z2RRJ');
       </script>
+      <script src="./index.js"></script>
     </div>
   </body>
 </html>
