Remove what vercel injects

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-
     <!-- Primary Meta Tags -->
     <title>Bits &amp; Bobs Co</title>
     <meta name="title" content="Bits &amp; Bobs Co">
@@ -33,7 +31,12 @@
     <div id="seo">
       <div id="navigation">
         <h1 id="wordmark">
-          <span>Bits</span> <span><span id="ampersand">&amp;</span> Bobs</span> <span>Co</span>
+          <span>Bits</span>
+          <span>
+            <span id="ampersand">&amp;</span>
+            Bobs
+          </span>
+          <span>Co</span>
         </h1>
         <p class="founded">
           Est 2023
