--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
     <!-- Primary Meta Tags -->
     <title>Bits &amp; Bobs Co</title>
     <meta name="title" content="Bits &amp; Bobs Co">
