--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
 
         gtag('config', 'G-6RZ39Z2RRJ');
       </script>
-      <script src="./index.js"></script>
+      <script async src="./index.js"></script>
     </div>
   </body>
 </html>
