--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <!-- Primary Meta Tags -->
     <title>Bits &amp; Bobs Co</title>
-    <meta name="title" content="Bits &amp; Bobs Co">
-    <meta name="description" content="A culture-led software company • Established 2023">
+    <meta name="title" content="Bits &amp; Bobs Co" />
+    <meta
+      name="description"
+      content="A culture-led software company • Established 2023"
+    />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.bits-n-bobs.com/">
-    <meta property="og:title" content="Bits &amp; Bobs Co">
-    <meta property="og:description" content="A culture-led software company • Established 2023">
-    <meta property="og:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.bits-n-bobs.com/" />
+    <meta property="og:title" content="Bits &amp; Bobs Co" />
+    <meta
+      property="og:description"
+      content="A culture-led software company • Established 2023"
+    />
+    <meta
+      property="og:image"
+      content="https://www.bits-n-bobs.com/images/thumbnail.jpg"
+    />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.bits-n-bobs.com/">
-    <meta property="twitter:title" content="Bits &amp; Bobs Co">
-    <meta property="twitter:description" content="A culture-led software company • Established 2023">
-    <meta property="twitter:image" content="https://www.bits-n-bobs.com/images/thumbnail.jpg">
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.bits-n-bobs.com/" />
+    <meta property="twitter:title" content="Bits &amp; Bobs Co" />
+    <meta
+      property="twitter:description"
+      content="A culture-led software company • Established 2023"
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.bits-n-bobs.com/images/thumbnail.jpg"
+    />
 
     <!-- Meta Tags Generated with https://metatags.io -->
-    <meta name="theme-color" content="rgb(222, 232, 222)">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./main.css">
-    <link rel="icon" href="./images/icon.png">
-
+    <meta name="theme-color" content="rgb(222, 232, 222)" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="./main.css" />
+    <link rel="icon" href="./images/icon.png" />
   </head>
   <body>
     <div id="seo">
@@ -39,35 +53,35 @@
           </span>
           <span>Co</span>
         </h1>
-        <p class="founded">
-          Est 2023
-        </p>
+        <p class="founded">Est 2023</p>
       </div>
       <section id="we-are">
         <h2 class="hidden"><a href="#we-are">We are</a></h2>
-        <p class="subheading">
-          a software company
-        </p>
+        <p class="subheading">a software company</p>
       </section>
       <section id="vision">
         <h2><a href="#vision">Vision</a></h2>
         <p>
-          The metaverse is expanding how we experience technology. Your interactions with tech should be as unique as your experiences in the real world. Our vision is to reflect the individual and the collective in digital experiences.
+          To unlock human creativity through technology that blends art,
+          education, and play—making learning and expression more accessible,
+          engaging, and meaningful for people of all ages.
         </p>
       </section>
       <section id="mission">
         <h2><a href="#mission">Mission</a></h2>
         <p>
-          We strive to offer the building blocks that allow individuals to define digital culture.
-        </p>
-        <p>
-          To make technology work for the individual and the collective, we provide creators with culture-led technology tools.
+          We create pioneering tools at the intersection of music, design, and
+          artificial intelligence, empowering educators, creators, and
+          communities to explore new ways of learning and self-expression.
         </p>
       </section>
       <section id="team">
         <h2><a href="#team">Team</a></h2>
         <p>
-          A husband &amp; wife team with +20 years of experience in technology, e-commerce, and design. We have worked with some of the most successful companies in the world and aim to bring this expertise to individuals.
+          Our team unites 20+ years of expertise in AI, design, and education.
+          With a track record of building globally adopted creative tools and
+          leading successful startups, we bring both technical innovation and
+          human-centered design to every project.
         </p>
       </section>
       <section id="contact">
@@ -94,10 +108,15 @@
     </div>
     <div class="scripts">
       <!-- Google tag (gtag.js) -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZ39Z2RRJ"></script>
+      <script
+        async
+        src="https://www.googletagmanager.com/gtag/js?id=G-6RZ39Z2RRJ"
+      ></script>
       <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() {
+          dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'G-6RZ39Z2RRJ');
